<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_TcUnit" Id="{78472b76-c9a4-4b27-a580-8e7898edc3d7}">
    <Declaration><![CDATA[{attribute 'no_assign'}
{attribute 'qualified_only'}
VAR_GLOBAL
    TcUnitRunner : FB_TcUnitRunner;
    TimeoutWatcher : FB_TimeoutWatcher;

    (* Indication of whether the last instantiated test suite has an assert instance created *)
    TestSuiteIsRegistered : BOOL;

    (* Pointer to current test suite being called *)
    CurrentTestSuiteBeingCalled : POINTER TO FB_TestSuite;
    
    (* Reference to current test being called *)
    CurrentTestBeingCalled : REFERENCE TO FB_Test;

    (* Current name of test being called *)
    CurrentTestNameBeingCalled : Tc2_System.T_MaxString;

    (* Whether or not the current test being called has finished running *)
    CurrentTestIsFinished : BOOL;

    (* This is a flag that indicates that the current test should be ignored, and
       thus that all assertions under it should be ignored as well. A test can be ignored either
       because the user has requested so, or because the test is a duplicate name *)
    IgnoreCurrentTest : BOOL;

    (* The assert function block instance should be 1:1 mapped to
       the test suite instance path. *)
    NumberOfInitializedTestSuites : UINT := 0;
    TestSuiteAddresses : ARRAY[1..GVL_Param_TcUnit.MaxNumberOfTestSuites] OF POINTER TO FB_TestSuite;

    (* If the user is utilizing the TEST_ORDERED(), we need to keep track of which ordered test is currently running.
       We do this by defining an array, in where we can see which current TEST_ORDERED() is the one to be handled right now.
       The below array is only used for TEST_ORDERED()-tests.  *)
    CurrentlyRunningOrderedTestInTestSuite : ARRAY[1..GVL_Param_TcUnit.MaxNumberOfTestSuites] OF UINT(1..GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite);

    (* Buffered ADS message queue for output to the error list *)
    AdsMessageQueue : FB_AdsLogStringMessageFifoQueue;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>